--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <button class="txtchar" type="button" id="no7">7</button>
                         <button class="txtchar" type="button" id="no8">8</button>
                         <button class="txtchar" type="button" id="no9">9</button>
-                        <button class="txt" type="button" id="multiply">X</button>
+                        <button class="txt" type="button" id="multiply">*</button>
                     </div>
     
                     <div class="button">
